Implemented generating sweeps for the boundary conditions, this probably makes MyBoundaryHandling obsolete. For the time being, disregard VelocityFunctior. Added and updated some aliases, also added a convenience struct Parameters to keep all the parameters together. Finally, getting closer to a working application. Code currently compiles and runs

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,8 +4,11 @@ waLBerla_link_files_to_builddir(*.obj)
 waLBerla_generate_target_from_python(NAME        generate_cumulant_lbm
                                      FILE        generate_cumulant_lbm.py
                                      OUT_FILES   CumulantMRTSweep.cpp CumulantMRTSweep.h
-			                          CumulantMRTPackInfo.cpp CumulantMRTPackInfo.h
-                        			   InitialPDFsSetter.cpp InitialPDFsSetter.h
+			                         CumulantMRTPackInfo.cpp CumulantMRTPackInfo.h
+                        			 InitialPDFsSetter.cpp InitialPDFsSetter.h
+                                     CumulantMRTSimpleUBB.cpp CumulantMRTSimpleUBB.h 
+                                     CumulantMRTOutflow.cpp CumulantMRTOutflow.h 
+                                     CumulantMRTNoSlip.cpp CumulantMRTNoSlip.h 
                                     )
 
 waLBerla_add_executable(NAME    aneurysm_simulation
