Worked on adding noise data in the inflow profile. Current bug: cell coordinates gotten from circle algorithm are different from the ones which are passed to the functor

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 waLBerla_link_files_to_builddir(*.prm)
 waLBerla_link_files_to_builddir(*.obj)
 waLBerla_link_files_to_builddir(*.json)
+waLBerla_link_files_to_builddir(*.py)
 
 
 waLBerla_generate_target_from_python(NAME        generate_cumulant_lbm
